# src/controllers/userController.ts
@@ -35,7 +35,8 @@ import { env } from "../config/config";
 import { UserService } from "../services/impl/UserService";
 import jwt from "jsonwebtoken";
 import { decodeJWT } from "@/middleware/authentication";
-import { Role, TokenInfo } from "@/types/types";
+import { ApiResponse, CreateNewUserRequest, GetUserIdFromTokenResponse, GetUserRoleFromTokenResponse, LoginRequest, LoginResponse, Role, TokenInfo, UpdateUserRequest } from "../types/types";
+import { signToken, signUserToken, validatePassword } from "@/utils/utils";
 
 @Route("user")
 export class UserController extends Controller {
@@ -49,18 +50,24 @@ export class UserController extends Controller {
   @Post("")
   @Tags("User")
   public async createUser(
-    @Body() body: { handle: string; password: string; email: string },
-  ) {
+    @Body() body: CreateNewUserRequest,
+  ): Promise<ApiResponse<null>> {
     const { handle, password, email } = body;
 
     try {
       await this.userService.createUser({ handle, password, email });
       this.setStatus(200);
-      return { message: "User created successfully" };
+      return {
+        message: "User created successfully",
+        status: 200,
+      }
     } catch (err) {
       this.setStatus(400);
-      const error = `Error creating user: ${err}`;
-      return { error };
+      return { 
+        message: "User not created",
+        status: 400,
+        error: `Error creating user: ${err}`,
+      }
     }
   }
 
@@ -69,17 +76,24 @@ export class UserController extends Controller {
   @Security("jwt", ["user"])
   public async getUserIdFromToken(
     @Header("x-access-token") token: string,
-  ) {
+  ): Promise<ApiResponse<GetUserIdFromTokenResponse>> {
     try {
       const decoded = await decodeJWT(token);
       this.setStatus(200);
       return {
-        id: decoded.id,
+        status: 200,
+        message: "User ID retrieved successfully",
+        data: {
+          id: decoded.id,
+        },
       };
     } catch (err) {
-      const error = `Error verifying token: ${err}`;
       this.setStatus(400);
-      return { error };
+      return { 
+        status: 400,
+        message: "User ID not retrieved",
+        error: `Error verifying token: ${err}`,
+      };
     }  
   }
 
@@ -88,120 +102,221 @@ export class UserController extends Controller {
   @Security("jwt", ["user"])
   public async getUserRoleFromToken(
     @Header("x-access-token") token: string,
-  ) {
+  ): Promise<ApiResponse<GetUserRoleFromTokenResponse>> {
     try {
       const decoded = await decodeJWT(token);
       this.setStatus(200);
       return {
-        role: decoded.role,
+        status: 200,
+        message: "User role retrieved successfully",
+        data: {
+          role: decoded.role,
+        }
       };
     } catch (err) {
       const error = `Error verifying token: ${err}`;
       this.setStatus(400);
-      return { error };
+      return {
+        status: 400,
+        message: "User role not retrieved",
+        error,
+      }
     }
   }
 
-  @Get('id/:id')
+  @Get('{id}')
   @Tags("User")
   @Security("jwt", ["user"])
-  public async getUserById(@Path() id: number): Promise<User | null> {
+  public async getUserById(@Path() id: number): Promise<ApiResponse<User | null>> {
     try {
-      return await this.userService.getUserById(id);
+      const user = await this.userService.getUserById(id);
+      this.setStatus(200);
+      return {
+        status: 200,
+        message: "User retrieved successfully",
+        data: user,
+      }
     } catch (err) {
-      throw new Error(`Error getting user: ${err}`);
+      this.setStatus(400);
+      return {
+        status: 400,
+        message: "User not retrieved",
+        error: `Error getting user: ${err}`,
+      }
     }
   }
 
   @Get("handle/{handle}")
   @Tags("User")
-  public async getUserByHandle(@Path() handle: string): Promise<User | null> {
+  public async getUserByHandle(@Path() handle: string): Promise<ApiResponse<User | null>> {
     try {
-      return await this.userService.getUserByHandle(handle);
+      const user = await this.userService.getUserByHandle(handle);
+      this.setStatus(200);
+      return {
+        status: 200,
+        message: "User retrieved successfully",
+        data: user,
+      }
     } catch (err) {
-      throw new Error(`Error getting user: ${err}`);
+      this.setStatus(400);
+      return {
+        status: 400,
+        message: "User not retrieved",
+        error: `Error getting user: ${err}`,
+      }
     }
   }
 
   @Delete("id/{id}")
   @Tags("User")
-  public async deleteUser(@Path() id: string): Promise<void> {
+  public async deleteUser(@Path() id: number): Promise<ApiResponse<null>> {
     try {
-      await this.userService.softDeleteUser(parseInt(id));
+      await this.userService.softDeleteUser(id);
+      this.setStatus(200);
+      return {
+        status: 200,
+        message: "User deleted successfully",
+      }
     } catch (err) {
-      throw new Error(`Error delete user: ${err}`);
+      this.setStatus(400);
+      return {
+        status: 400,
+        message: "User not deleted",
+        error: `Error deleting user: ${err}`,
+      }
     }
   }
 
   @Patch()
   @Tags("User")
   public async updateUserById(
-    @Body() body: { handle: string; password: string; email: string },
+    @Body() body: UpdateUserRequest,
     @Header("x-access-token") token: string,
-  ) {
+  ): Promise<ApiResponse<null>> {
     try {
       const decoded: TokenInfo = await decodeJWT(token);
       
       await this.userService.updateUser(decoded.id, body);
       this.setStatus(200);
-      return { message: "User updated successfully" };
+      return { 
+        message: "User updated successfully", 
+        status: 200,
+      };
     } catch (err) {
-      throw new Error(`Error verifying token: ${err}`);
+      this.setStatus(400);
+      return {
+        message: "User not updated",
+        status: 400,
+        error: `Error updating user: ${err}`,
+      }
     }
   }
 
   @Patch("admin/{id}")
   @Tags("User")
   @Security("jwt", ["admin"])
-  public async addAdmin(@Path() id: number) {
+  public async addAdmin(@Path() id: number): Promise<ApiResponse<null>> {
     try {
-      return await this.userService.updateUser(id, { role: Role.Admin });
+      await this.userService.updateUser(id, { role: Role.Admin });
+      this.setStatus(200);
+      return {
+        status: 200,
+        message: "Admin added successfully",
+      }
     } catch (err) {
-      throw new Error(`Error adding admin: ${err}`);
+      this.setStatus(400);
+      return {
+        status: 400,
+        message: "Admin not added",
+        error: `Error adding admin: ${err}`,
+      }
     }
   }
 
   @Post("login")
-  public async login(@Body() body: { email?: string; password: string; handle?: string }) {
+  @Tags("User")
+  public async login(@Body() body: LoginRequest): Promise<ApiResponse<LoginResponse | null>> {
     try {
       const { email, password, handle } = body;
       if (!email && !handle) {
         this.setStatus(400);
-        return { error: "Email or handle is required" };
+        return {
+          error: "Email or handle is required",
+          message: "Login failed",
+          status: 400,
+        }
       }
       if (email) {
         const user = await this.userService.getUserByEmail(email);
         if (user) {
-          if (keccak256(password).toString("hex") === user.password) {
-            const payload = { id: user.id, role: user.role };
+          if (validatePassword(password, user)) {
+            this.setStatus(200);
             return {
-              token: sign(payload, env.jwt_secret, {
-                expiresIn: "2days",
-              })
-            }          
+              status: 200,
+              message: "Login successful",
+              data: {
+                token: signUserToken(user)
+              },
+            }
+          } else {
+            this.setStatus(400);
+            return {
+              status: 400,
+              message: "Login failed",
+              error: "Invalid password",
+            }
           }
-          throw new Error("Invalid password");
+        } else {
+          this.setStatus(400);
+          return {
+            status: 400,
+            message: "Login failed",
+            error: "User not found",
+          }
         } 
       }
       if (handle) {
         const user = await this.userService.getUserByHandle(handle);
         if (user) {
-          if (keccak256(password).toString("hex") === user.password) {
-            const payload = { id: user.id, role: user.role };
+          if (validatePassword(password, user)) {
+            this.setStatus(200);
             return {
-              token: sign(payload, env.jwt_secret, {
-                expiresIn: "2days",
-              })
+              status: 200,
+              message: "Login successful",
+              data: {
+                token: signUserToken(user),
+              }
+            }
+          } else {
+            this.setStatus(400);
+            return {
+              status: 400,
+              message: "Login failed",
+              error: "Invalid password",
             }
           }
-          throw new Error("Invalid password");
+        } else {
+          this.setStatus(400);
+          return {
+            status: 400,
+            message: "Login failed",
+            error: "User not found",
+          }
         }
       }
-      return null;
-    } catch (err) {
-      const error = `Error login: ${err}`;
       this.setStatus(400);
-      return { error };
+      return {
+        status: 400,
+        message: "Login failed",
+        error: "User not found",
+      }
+    } catch (err) {
+      this.setStatus(400);
+      return {
+        status: 400,
+        message: "Login failed",
+        error: `Error logging in: ${err}`,
+      }
     }
   }
 }
